--- a/index.html
+++ b/index.html
@@ -1,1 +1,56 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>A Brilliant Change Inc.</title>
+
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            background: #ffffff;
+            font-family: Arial, sans-serif;
+            color: #111;
+        }
+        header {
+            background: url('https://digitalperfections.sharepoint.com/:i:/s/ABC-Core-Team/...?raw=1') center/cover no-repeat;
+            height: 420px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            color: white;
+            text-shadow: 0 0 8px rgba(0,0,0,0.6);
+        }
+        header h1 {
+            font-size: 3rem;
+            margin: 0;
+        }
+        header h2 {
+            font-size: 1.35rem;
+            font-weight: 300;
+            margin-top: 8px;
+        }
+
+        .cta-bar {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 15px;
+        }
+        .cta-btn {
+            background: #ffcc00;
+            color: #000;
+            padding: 12px 25px;
+            font-size: 1.1rem;
+            font-weight: bold;
+            text-decoration: none;
+            border-radius: 6px;
+        }
+
+        section {
+            max-width: 900px;
+            margin: 60px auto;
+
